--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Swiper</title>
  
-  <link rel="stylesheet" href="/card slider/style.css">
-  <link rel="stylesheet" href="/card slider/cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="cdn.jsdelivr.net_npm_swiper@10.2.0_swiper-bundle.min.css">
   
 
 </head>
@@ -15,7 +15,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide">
         <div class="content">
-          <div class="cover"><img src="/imagem/salad.jpg" alt="salad"></div>
+          <div class="cover"><img src="salad.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
@@ -23,7 +23,7 @@
       </div>
       <div class="swiper-slide">
         <div class="content">
-          <div class="cover"><img src="/imagem/park1.jpg" alt="salad"></div>
+          <div class="cover"><img src="park1.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
@@ -31,7 +31,7 @@
       </div>
       <div class="swiper-slide"> 
         <div class="content">
-          <div class="cover"><img src="/imagem/salad.jpg" alt="salad"></div>
+          <div class="cover"><img src="salad.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
@@ -39,7 +39,7 @@
       </div>
       <div class="swiper-slide">
         <div class="content">
-          <div class="cover"><img src="/imagem/rose1.jpg" alt="salad"></div>
+          <div class="cover"><img src="rose1.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
@@ -47,7 +47,7 @@
       </div>
       <div class="swiper-slide">
         <div class="content">
-          <div class="cover"><img src="/imagem/salad.jpg" alt="salad"></div>
+          <div class="cover"><img src="salad.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
@@ -55,7 +55,7 @@
       </div>
       <div class="swiper-slide">
         <div class="content">
-          <div class="cover"><img src="/imagem/rose2.jpg" alt="salad"></div>
+          <div class="cover"><img src="rose2.jpg" alt="salad"></div>
           <h3>Caeser</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicin!</p>
           <button class="buton">Submit</button>
