--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <!-- Swiper JS -->
 <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
-<script src="/card slider/home.js"> </script>
+<script src="home.js"> </script>
 </script>
 </body>
 
